Variable support, replacement for entire request

--- a/src/templates/gql/UseLive.yaml
+++ b/src/templates/gql/UseLive.yaml
@@ -1,5 +1,8 @@
 template:
   id: "uselive"
+  variables:
+    - key: "login"
+      type: "string"
   requests:
     - id: "req_1"
       method: "post"
